center aligned most of content, added changing background, small fixes

--- a/style.css
+++ b/style.css
@@ -14,16 +14,30 @@ font-weight: 100;
 }
 /*BODY STYLING*/
 body {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
   background-position: center;
   background: #010101;
-  background-image: url("assets/games2.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
-  background-blend-mode: lighten ;
+  background-blend-mode: lighten;
+}
+
+.background {
+  width: 100%;
+  height: 100%;
+  background: url("assets/games2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  -webkit-filter: grayscale(100%);
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+  position: absolute;
+  z-index: -1;
+  -webkit-box-shadow: inset 0px -100px 100px 0px rgba(1,1,1,1);
+  -moz-box-shadow: inset 0px -100px 100px 0px rgba(1,1,1,1);
+  box-shadow: inset 0px -100px 100px 0px rgba(1,1,1,1);
 }
 
 
@@ -38,6 +52,10 @@ body {
   #header{
     font-size: 50px;
     text-align: center;
+  }
+
+  .background {
+    display: none;
   }
 }
 
@@ -92,6 +110,7 @@ body {
   font-family: 'Orbitron', sans-serif;
   font-size: 1.5rem;
   display: none;
+  text-align: center;
 }
 
 /*This is for the third border where video game Gifs go*/
@@ -201,7 +220,7 @@ text-align: center;
 
 }
 .button { /* initial state*/
-margin-top: 300px;
+margin-top: 100px;
 margin-bottom: 50px;
 padding:0.5em 3em;
 border: 0.16em solid #FFFFFF;
@@ -240,17 +259,26 @@ border-color: #dddddd;
   padding-right: 20px;
  
 }
-body ul {
-  list-style-type: square;
+
+.listItem {
+  margin: 5px;
+  padding: 5px;
+  border: 3px solid black;
+  border-radius: 10px;
+  background-color: rgb(46, 46, 46);
 }
 
-#gameGifs {
- 
+.lists{
+  margin-left: 20px;
+  line-height: 2;
+  padding: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-
-
-
-
-
-
+.gifDiv {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
